# opengl_testing_2

./: Cargo.toml  README.md  game engine ideas.txt
assets/shaders/: cube_depth_shader.frag  cube_depth_shader.geom  cube_depth_shader.vert  debug_shader.frag  debug_shader.geom  debug_shader.vert  deffered_shader.frag  depth.frag  depth.vert  framebuffer.frag  framebuffer.vert  gaussian_blur.frag  light_source.frag  light_source.vert  lighting_pass_shader.frag  normal_vec.geom  shader.frag  shader.geom  shader.vert  skybox.frag  skybox.vert  stencil.frag  widget.frag  widget.vert
assets/shaders/widgets/: background.frag  border.frag  pass.frag  texture.frag  widget.vert
src/: camera.rs  framebuffer.rs  light.rs  main.rs  mesh.rs  model.rs  quad.rs  shader_program.rs  skybox.rs  texture.rs  uniform_buffer.rs
src/gl_safe/: buffer_obj.rs  camera.rs  error.rs  framebuffer.rs  light.rs  mesh.rs  mod.rs  model.rs  quad.rs  render_buffer.rs  render_pipeline.rs  scene.rs  shader_program.rs  skybox.rs  texture.rs  uniform_buffer.rs  vert_array.rs  vertex.rs  view_3d_render_pipeline.rs  view_3d_scene.rs
