[package]
name = "opengl_testing_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.51.0"
silver_gl = {path = "../../silver_gl"}
cinema_skylight_engine = {path = ".."}
cgmath = "0.18.0"
rand = "0.8.5"